# FYP-firmware

./: .gitignore  README.md
ESP32_S3_device_node/: ESP32_S3_device_node.ino
device_node/: CMakeLists.txt
device_node/main/: CMakeLists.txt  device_control.c  device_control.h  esp32_controller.c
voice_node/: CMakeLists.txt
voice_node/main/: CMakeLists.txt  app_main.c
voice_node/main/audio/: audio_input.c  audio_input.h  audio_output.c  audio_output.h
voice_node/main/drivers/: es8311.c  es8311.h  i2s_driver.c  i2s_driver.h
voice_node/main/network/: stt_client.c  tts_client.c
voice_node/main/pipeline/: voice_pipeline.c
